Added exception handler, modified api implementation
