# medikus/src/main/java/medikus/rs/api/VisitApi.java
@@ -7,6 +7,7 @@ import javax.ws.rs.GET;
 import javax.ws.rs.POST;
 import javax.ws.rs.PUT;
 import javax.ws.rs.Path;
+import javax.ws.rs.PathParam;
 import javax.ws.rs.Produces;
 import javax.ws.rs.QueryParam;
 
@@ -17,24 +18,25 @@ import medikus.rs.model.RetrieveVisitResponse;
 import medikus.rs.model.UpdateVisitRequest;
 import medikus.rs.model.UpdateVisitResponse;
 
-@Path("/visit")
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaJAXRSSpecServerCodegen", date = "2023-04-18T13:48:10.318236100+02:00[Europe/Rome]")public interface VisitApi {
+
+@Path("/visit/{ssn}")
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaJAXRSSpecServerCodegen", date = "2023-04-21T16:11:32.632303600+02:00[Europe/Rome]")public interface VisitApi {
 
     @DELETE
     @Produces({ "application/json" })
-    DeleteVisitResponse cancelVisit(@QueryParam("visitId")    Long visitId);
+    DeleteVisitResponse cancelVisit(@PathParam("ssn") String ssn,@QueryParam("visitId")    Long visitId);
 
     @PUT
     @Consumes({ "application/json" })
     @Produces({ "application/json" })
-    RegisterVisitResponse registerVisit(@Valid RegisterVisitRequest registerVisitRequest);
+    RegisterVisitResponse registerVisit(@PathParam("ssn") String ssn,@Valid RegisterVisitRequest registerVisitRequest);
 
     @GET
     @Produces({ "application/json" })
-    RetrieveVisitResponse retrieveVisit(@QueryParam("visitId")    Long visitId);
+    RetrieveVisitResponse retrieveVisit(@PathParam("ssn") String ssn,@QueryParam("visitId")    Long visitId);
 
     @POST
     @Consumes({ "application/json" })
     @Produces({ "application/json" })
-    UpdateVisitResponse updateVisit(@Valid UpdateVisitRequest updateVisitRequest);
+    UpdateVisitResponse updateVisit(@PathParam("ssn") String ssn,@Valid UpdateVisitRequest updateVisitRequest);
 }
